<resources>
    <string name="app_name">BlockBuddy</string>

    <!-- Content Descriptions -->
    <string name="cd_shape">shape</string>
    <string name="cd_logo">logo</string>

    <!-- LOGIN / REGISTER -->
    <string name="lr_bienvenidoTexto">BIENVENIDO!</string>
    <string name="lr_textoWelcome">BlockBuddy, la solución para una comunidad de vecinos unida y organizada.</string>
    <string name="lr_btn_registro">REGISTRARSE</string>
    <string name="lr_btn_iniciosesion">INICIAR SESIÓN</string>

    <!-- LOGIN-->
    <string name="l_textoIniciarSesion">INICIAR SESIÓN</string>
    <string name="l_textoBlup">INICIA SESIÓN EN BLOCKBUDDY PARA UNIRTE A TU COMUNIDAD DE VECINOS</string>
    <string name="l_correo">CORREO</string>
    <string name="l_correoHint">Correo electrónico</string>
    <string name="l_passwordForgot">He olvidado la contraseña</string>
    <string name="l_password">CONTRASEÑA</string>
    <string name="l_passwordHint">Contraseña</string>

    <!-- REGISTRO-->
    <string name="r_textoRegistro">REGISTRO</string>
    <string name="r_textoNombre">NOMBRE</string>
    <string name="r_textoCorreo">CORREO</string>
    <string name="r_textoTelefono">TELEFONO</string>
    <string name="r_textoCodigoComunidad">CODIGO</string>
    <string name="r_textoPiso">Nº PISO</string>
    <string name="r_textoPuerta">PUERTA</string>
    <string name="r_textoContraseña">CONTRASEÑA</string>

    <!-- AJUSTES-->
    <string name="ajustes_btnupdate">ACTUALIZAR</string>
    <string name="ajustes_cambiarContraseña">Cambiar Contraseña</string>
    <string name="ajustes_eliminarCuenta">Eliminar Cuenta</string>


    <!-- MAIN USUARIO -->
    <string name="mainUsuario_btnComunidad">COMUNIDAD</string>
    <string name="mainUsuario_WelcomeMsg">BIENVENID@!</string>

    <!-- MAIN ADMIN -->
    <!-- ADMIN REGISTRO -->
    <string name="adminRegistro_title">REGISTRO ADMIN</string>

    <!-- ADMIN CREAR COMUNIDAD-->
    <string name="adminCrearComunidad_title">CREAR COMUNIDAD</string>
    <string name="adminCrearComunidad_textoCodigo">CóDIGO COMUNIDAD</string>
    <string name="adminCrearComunidad_textoDireccion">DIRECCIÓN</string>
    <string name="adminCrearComunidad_textoPoblacion">VIVIENDAS</string>
    <string name="adminCrearComunidad_textoCP">CÓDIGO POSTAL</string>
    <string name="adminCrearComunidad_crear">CREAR</string>

    <!-- TU COMUNIDAD -->
    <string name="tucomunidad_vecinos">VECINOS</string>

    <!-- INCIDENCIAS REGISTRO -->
    <string name="incidenciasRegistro_title">NUEVA INCIDENCIA</string>
    <string name="incidenciasRegistro_descripcion">DESCRIPCIÓN</string>
    <string name="incidenciasRegistro_titulo">TITULO</string>
    <string name="incidenciasRegistro_addFoto">AGREGAR FOTO</string>

    <!-- REGISTER CONTACTO -->
    <string name="registerContacto_nombre">NOMBRE</string>
    <string name="registerContacto_telefono">TELÉFONO</string>
    <string name="registerContacto_titulo">NUEVO CONTACTO</string>

    <!-- REGISTER REUNION -->
    <string name="registerReunion_titulo">NUEVA REUNIÓN</string>
    <string name="registerReunion_descripcion">DESCRIPCIÓN</string>
    <string name="registerReunion_fecha">FECHA</string>
    <string name="registerAnuncio_titulo">NUEVO ANUNCIO</string>
    <string name="registerDoc_titulo">NUEVO DOCUMENTO</string>
    <string name="docReg_addDoc">ADJUNTAR</string>



</resources>