<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginRegisterActivity">

    <ImageView
        android:id="@+id/shape"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cd_shape"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_circleshape" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="412dp"
        android:layout_height="259dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/cd_logo"
        android:transitionName="logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/hai"
        android:text="@string/lr_bienvenidoTexto"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/shape" />

    <TextView
        android:id="@+id/textoWelcome"
        android:layout_width="325dp"
        android:layout_height="66dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/hai"
        android:text="@string/lr_textoWelcome"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        tools:ignore="TextContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lr_btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:fontFamily="@font/hai"
        android:text="@string/lr_btn_registro"
        android:textColor="#DD2C00"
        android:textSize="13sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lr_btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:fontFamily="@font/hai"
        android:text="@string/lr_btn_iniciosesion"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>