<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/ic_sheet">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:outlineAmbientShadowColor="@color/transparent"
        android:outlineSpotShadowColor="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarColoredBackArrow"
            app:titleTextAppearance="@style/ToolbarTheme"
            app:titleTextColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/r_textoIniciarSesion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/hai"
                    android:text="@string/lr_btn_registro"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/cd_shape"
        app:layout_constraintBottom_toTopOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_wave1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/cd_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_blob" />

    <TextView
        android:id="@+id/login_blop_texto"
        android:layout_width="183dp"
        android:layout_height="65dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="165dp"
        android:fontFamily="@font/hai"
        android:text="@string/l_textoBlup"
        android:textColor="@color/orange"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/login_iniciar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/hai"
        android:text="@string/l_textoIniciarSesion"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="461dp"
        android:layout_height="418dp"
        android:layout_marginStart="-22dp"
        android:layout_marginBottom="-50dp"
        android:contentDescription="@string/cd_shape"
        android:rotation="90"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_rectangle"
        tools:ignore="ImageContrastCheck" />
    <!-- LOGIN - CORREO -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/r_btnregistro"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/orange2"
        android:clickable="true"

        android:fontFamily="@font/hai"
        android:text="@string/lr_btn_iniciosesion"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Llogin_const_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4">
        <!-- TextInputEditText Correo -->
        <TextView
            android:id="@+id/Llogin_correo"
            android:layout_width="297dp"
            android:layout_height="21dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hai"
            android:text="@string/l_correo"
            android:textColor="@color/orange"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Llogin_prompt_correo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:alpha="0.7"
            android:fontFamily="@font/hai"
            android:textSize="14sp"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Llogin_correo"
            app:boxCornerRadiusBottomEnd="10dp"
            app:errorTextColor="@color/orange"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintEnabled="false"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Llogin_prompt_correo_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow1"
                android:fontFamily="@font/hai"
                android:hint="@string/l_correoHint"
                android:textColor="@color/orange3"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Login CONTRASEÑA-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Llogin_const_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Llogin_const_correo">
        <!-- Texto Contraseña -->
        <TextView
            android:id="@+id/Llogin_contraseña"
            android:layout_width="296dp"
            android:layout_height="24dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hai"
            android:text="@string/l_password"
            android:textColor="@color/orange"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/Llogin_prompt_contraseña"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- InputEditText Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Llogin_prompt_contraseña"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:alpha="0.7"
            android:fontFamily="@font/hai"
            android:textSize="14sp"
            app:boxBackgroundMode="outline"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:hintEnabled="false"
            app:errorTextColor="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Llogin_contraseña"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Llogin_prompt_contraseña_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow1"
                android:fontFamily="@font/hai"
                android:hint="@string/l_passwordHint"
                android:inputType="textPassword"
                android:textColor="@color/orange2"
                android:textSize="11sp" />

        </com.google.android.material.textfield.TextInputLayout>
        <!-- Texto Contraseña Olvidada-->
        <TextView
            android:id="@+id/Llogin_contraseña_olvidada"
            android:layout_width="219dp"
            android:layout_height="23dp"
            android:layout_marginStart="-100dp"
            android:layout_marginTop="115dp"
            android:alpha="1"
            android:clickable="true"
            android:fontFamily="@font/hai"
            android:text="@string/l_passwordForgot"
            android:textColor="@color/orange"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/Llogin_contraseña"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>