<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_rectangle2"
    tools:context=".RegistrarIncidenciaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/cr_in_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ToolbarColoredBackArrow2"
            app:titleTextAppearance="@style/ToolbarTheme"
            app:titleTextColor="@color/orange">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cr_in_const_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4">
        <!-- TextInputEditText Correo -->
        <TextView
            android:id="@+id/cr_in_nombre"
            android:layout_width="297dp"
            android:layout_height="21dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hai"
            android:text="@string/incidenciasRegistro_titulo"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cr_in_prompt_nombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            android:fontFamily="@font/hai"
            android:textSize="14sp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:errorTextAppearance="@style/error_appearance"
            app:errorTextColor="@color/white"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cr_in_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cr_in_prompt_nombre_EditText"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/shadow1"
                android:fontFamily="@font/hai"
                android:hint="@string/incidenciasRegistro_titulo"
                android:textColor="@color/orange3"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cr_in_const_descricion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4">
        <!-- TextInputEditText Correo -->

        <TextView
            android:id="@+id/cr_in_descripcion"
            android:layout_width="297dp"
            android:layout_height="21dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hai"
            android:text="@string/incidenciasRegistro_descripcion"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cr_in_prompt_descripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            android:fontFamily="@font/hai"
            android:textSize="14sp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:endIconMode="clear_text"
            app:errorTextAppearance="@style/error_appearance"
            app:errorTextColor="@color/white"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cr_in_descripcion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cr_in_prompt_descripcion_EditText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="start"
                android:background="@drawable/shadow_grande"
                android:fontFamily="@font/hai"
                android:padding="25dp"
                android:hint="@string/incidenciasRegistro_descripcion"
                android:textColor="@color/orange3"
                android:textSize="11sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/cd_shape"
        android:rotation="180"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@drawable/ic_wave1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cr_in_btnregistro"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/white"

        android:clickable="true"
        android:fontFamily="@font/hai"
        android:text="@string/adminCrearComunidad_crear"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cr_in_addImagen"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"

        android:backgroundTint="@color/white"
        android:clickable="true"
        android:fontFamily="@font/hai"
        android:text="@string/incidenciasRegistro_addFoto"
        android:textColor="#DD2C00"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cr_in_const_descricion" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="461dp"
        android:layout_height="418dp"
        android:layout_marginStart="-25dp"
        android:layout_marginTop="-330dp"
        android:contentDescription="@string/cd_shape"
        android:rotation="90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rectangle"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/cr_in_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/hai"
        android:text="@string/incidenciasRegistro_title"
        android:textColor="@color/orange"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>